--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,3 +48,33 @@
 [data-animation] {
     background-image: url("https://static.whatsapp.net/rsrc.php/v3/yf/r/4l5Jzvrg84p.png");
 }
+
+.bgImg{
+    background-image: url(https://static.whatsapp.net/rsrc.php/v3/yl/r/gi_DckOUM5a.png);
+}
+
+.custom-scroll {
+    overflow-y: scroll;
+    scrollbar-width: thin; /* Firefox */
+    scrollbar-color: #888 #f1f1f1; /* Firefox */
+  }
+  
+  .custom-scroll::-webkit-scrollbar {
+    width: 8px; /* width of the scrollbar */
+    height: 8px; /* height of the scrollbar (for horizontal scrollbar) */
+  }
+  
+  .custom-scroll::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 10px;
+  }
+  
+  .custom-scroll::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+  
+  .custom-scroll::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+  }
+  
