status screen and useContext wireup

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,4 +77,10 @@
     background: #f1f1f1;
     border-radius: 10px;
   }
+
+  .statusTextField{
+    .MuiInputBase-input.MuiInput-input{
+        color: white;
+      }
+  }
   
