--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,4 +83,10 @@
         color: white;
       }
   }
+
+  .radioButton{
+      .MuiButtonBase-root.MuiRadio-root.Mui-checked {
+        color: #008069;
+      }
+  }
   
